# displit

./: CMakeLists.txt  README.md  dipole.cpp  event.cpp  generic.slurm  graphics.cpp  main.cpp  utils.cpp
include/: EventTree.h  dipole.h  event.h  graphics.h  main.h  utils.h
